--- a/HTML/cntrlPressaoArterial.html
+++ b/HTML/cntrlPressaoArterial.html
@@ -10,16 +10,11 @@
     </head>
 
     <body>
-
-        <header>
-
-            <h1> Informe sua pressão arterial e as datas de sua medição na tabela abaixo</h1>
-
-        </header>
-
         <fieldset>
 
             <table>
+
+                <legend><h3>Informe sua pressão arterial e as datas de sua medição na tabela abaixo</h3></legend>
                
                 <thead>
                     <th>Data</th>
@@ -193,6 +188,9 @@
 
             </table>
 
+            <br><br>
+            <p><label>ALERTA!<br>A hipotensão ortostática é causa frequente de tonturas e quedas em pessoas idosas. Para identificá-la, é recomendada a medida da pressão arterial nas três posições (deitada, sentada e de pé). Seu diagnóstico é estabelecido quando há uma redução de 20 mmHg ou mais na medida da pressão sistólica ou de 10 mmHg ou mais na pressão diastólica, com a mudança da posição deitada para sentada ou de pé.</label></p>
+            <br><br>
 
         </fieldset>
 
@@ -201,8 +199,7 @@
     </body>
 
     <footer>
-        <br>
-        <label>ALERTA!<br>A hipotensão ortostática é causa frequente de tonturas e quedas em pessoas idosas. Para identificá-la, é recomendada a medida da pressão arterial nas três posições (deitada, sentada e de pé). Seu diagnóstico é estabelecido quando há uma redução de 20 mmHg ou mais na medida da pressão sistólica ou de 10 mmHg ou mais na pressão diastólica, com a mudança da posição deitada para sentada ou de pé.</label>
+        
     </footer>
 
 
