--- a/HTML/home.html
+++ b/HTML/home.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <h1>Bem-Vindo!</h1>
+        <legend><h1>Bem vindo!</h1></legend>
         <h4>Acesse as opções abaixo para prosseguir com os cadastros restantes e mais!</h3>
 
        <div class="grid-container">
