--- a/HTML/cntrlGlicemia.html
+++ b/HTML/cntrlGlicemia.html
@@ -5,126 +5,127 @@
         <meta charset="UTF-8">
         <title>Glicemia</title>
         <link rel="stylesheet" type="text/css" href="../CSS/estiloCntrlGlicemia.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Battambang&display=swap" rel="stylesheet">
     </head>
 
 
     <body>
-        <header>
-            <h2>Controle de Glicemia</h2>
-            <p>O valor de referência da glicemia depende da presença ou não de jejum. O diagnóstico de diabetes mellitus é feito quando duas ou mais dosagens de glicemia de jejum, após jejum mínimo de 8h, são iguais ou maiores que 126 mg/dL.<p>Caso  a  glicemia  capilar  seja  colhida  na  unidade  de  saúde,  de  forma  casual  ou  sem  jejum prévio, a dosagem deverá ser de até 200 mg/dL.
-        </header>
 
-        <table>
-            <thead>
-                <th>Data</th>
-                <th>Glicemia</th>
-                <th>Data</th>
-                <th>Glicemia</th>
-                <th>Data</th>
-                <th>Glicemia</th>
-                <th>Data</th>
-                <th>Glicemia</th>
-                <th>Data</th>
-                <th>Glicemia</th>
+        <Fieldset>
+            <legend><h3>Controle de Glicemia</h3></legend>
+            <header>
                 
-            </thead>
+                <p>O valor de referência da glicemia depende da presença ou não de jejum. O diagnóstico de diabetes mellitus é feito quando duas ou mais dosagens de glicemia de jejum, após jejum mínimo de 8h, são iguais ou maiores que 126 mg/dL.<p>Caso  a  glicemia  capilar  seja  colhida  na  unidade  de  saúde,  de  forma  casual  ou  sem  jejum prévio, a dosagem deverá ser de até 200 mg/dL.
+            </header>
 
-            <tbody>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-            </tbody>
+            <table>
+                <thead>
+                    <td>Data</td>
+                    <td>Glicemia</td>
+                    <td>Data</td>
+                    <td>Glicemia</td>
+                    <td>Data</td>
+                    <td>Glicemia</td>
+                    <td>Data</td>
+                    <td>Glicemia</td>
+                    <td>Data</td>
+                    <td>Glicemia</td>
+                    
+                </thead>
 
-            <tbody>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-            </tbody>
+                <tbody>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                </tbody>
 
-            <tbody>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-            </tbody>
+                <tbody>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                </tbody>
 
-            <tbody>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-            </tbody>
+                <tbody>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                </tbody>
 
-            <tbody>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-            </tbody>
+                <tbody>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                </tbody>
 
-            <tbody>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-            </tbody>
+                <tbody>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                </tbody>
 
-            <tbody>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-                <td><input type="date"></td>  
-                <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
-            </tbody>
+                <tbody>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                </tbody>
 
-        </table>
+                <tbody>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                    <td><input type="date"></td>  
+                    <td><input type="radio" name="jejum/casual">Jejum <input type="radio" name="jejum/casual">Casual<br><input type="number">mg/dL</td>
+                </tbody>
 
+            </table>
 
+        </Fieldset>
 
 
 
